--- a/postgresql-9.5/.binstar.yml
+++ b/postgresql-9.5/.binstar.yml
@@ -12,7 +12,7 @@ engine:
   - python=2
 
 script:
-  - yum install -y libreadline-dev
+  - yum install -y readline-devel bison
   - conda build  .
 
 build_targets: conda
